<?xml version="1.0"?>
<package format="2">
  <name>tams_execute</name>
  <version>1.0.0</version>
  <description>Tiny helper to start things in other workspace contexts</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
